--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,131 @@
-* { 
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
-    /* background-image: url(https://source.unsplash.com/random/1920x1080?wallpaper); */
-    background-image: url(https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
+    /* background-image: url(https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80); */
+    background-image: url(https://source.unsplash.com/random/1920x1080?wallpaper);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    min-height: 100vh;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 main {
-    padding-top: 2em;
-    display: grid;
-    gap: 1em;
-    place-items: center;
+    display: flex;
+    padding: 2rem;
+    gap: 5em;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    min-height: 60vh;
+    max-width: 50rem;
+    margin-inline: auto;
 }
 
+form {
+    width: 100%
+}
 
 .button {
     cursor: pointer;
 }
 
 .button-icon {
-    filter:grayscale()
+    border: none;
+    border-radius: 100vh;
+    aspect-ratio: 1;
+    background: none;
+    filter: grayscale();
 }
 
 .button-icon:hover {
-    filter:none;
+    filter: none;
+}
+
+.form-block {
+    display: grid;
+}
+
+.search-bar {
+    display: grid;
+    font-size: 1.2rem;
+    grid-template-columns: 1fr 2.1em;
+}
+
+.search-bar-input {
+    padding-block: .3em;
+    padding-left: .8em;
+    padding-right: 2.3em;
+    background-color: hsla(0, 0%, 100%, 0.75);
+    border: none;
+    border-radius: 100vh;
+    width: 100%;
+    grid-column: 1 / -1;
+    grid-row: 1;
+}
+
+.form-block>* {
+    outline: none;
+}
+
+.form-block>*:focus-visible {
+    filter: none;
+    box-shadow:
+        0 0 0 1px hsl(0deg 0% 0% / 50%),
+        0 0 0 2px hsl(0deg 0% 100% / 50%);
+}
+
+
+.search-bar-input::placeholder {
+    color: currentColor;
+    opacity: .5;
+}
+
+.search-bar-input::-webkit-search-cancel-button {
+    cursor: pointer;
+}
+
+.search-bar-button {
+    grid-column: 2;
+    grid-row: 1;
+    justify-self: center;
+}
+
+.search-bar-button:active {
+    filter: brightness(.8);
+}
+
+.search-engine {
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    margin-top: .3rem;
+    padding: .1em;
+    border-radius: 100vh;
+    background-color: transparent;
+    justify-self: center;
+    color: white;
+    text-shadow: 0px 0px 5px black;
+}
+
+.search-engine option {
+    background-color: rgb(0, 0, 0);
+}
+
+.date-and-time {
+    text-align: center;
+    line-height: 1.2;
+    color: white;
+    text-shadow: 0px 0px 3px black;
+    /* -webkit-text-stroke: 1px var(--shadow-color); */
+    /* text-shadow:
+        -1px 0 var(--shadow-color),
+        1px 0 var(--shadow-color),
+        0 -1px var(--shadow-color),
+        0 1px var(--shadow-color); */
 }
 
 .clock {
-    font-size: 6rem;
+    font-size: clamp(5rem, 10vw, 10rem);
 }
 
 .date {
-    font-size: 2rem;
+    font-size: clamp(1.75rem, 3.5vw, 3.5rem);
 }
