--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 body {
     /* background-image: url(https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80); */
-    background-image: url(https://source.unsplash.com/random/1920x1080);
+    background-image: url(https://source.unsplash.com/random/1920x1080?wallpaper);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    backdrop-filter: blur(.5rem);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
