--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     background-image: url(https://source.unsplash.com/random/1920x1080?wallpaper);
-        /* background-image: url(https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80); */
+    /* background-image: url(https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80); */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -26,18 +26,24 @@ form {
 
 .button {
     cursor: pointer;
+    text-decoration: none;
 }
 
 .button-icon {
     border: none;
     border-radius: 100vh;
-    aspect-ratio: 1;
+    aspect-ratio: 1 / 1;
     background: none;
     filter: grayscale();
+    place-content: center;
 }
 
 .button-icon:hover {
     filter: none;
+}
+
+.button-icon:active {
+    filter: brightness(.8);
 }
 
 .form-block {
@@ -46,6 +52,7 @@ form {
 
 .search-bar {
     display: grid;
+    position: relative;
     font-size: 1.2rem;
     grid-template-columns: 1fr 2.1em;
 }
@@ -58,7 +65,7 @@ form {
     border: none;
     border-radius: 100vh;
     width: 100%;
-    grid-column: 1 / -1;
+    grid-column: 1 / 3;
     grid-row: 1;
 }
 
@@ -86,11 +93,15 @@ form {
 .search-bar-button {
     grid-column: 2;
     grid-row: 1;
-    align-self: center;
 }
 
-.search-bar-button:active {
-    filter: brightness(.8);
+.new-tab-button {
+    position: absolute;
+    line-height: 2;
+    right: -2.5em;
+    text-align: center;
+    top: 0;
+    bottom: 0;
 }
 
 .search-engine {
